# DataMinds_Homework_7

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci-build.yaml
backend/: Dockerfile  README.md  app.py  main.py  pyproject.toml
backend/src/: __init__.py  utils.py
backend/src/features/: build_features.py
backend/src/models/: predict_model.py  train_model.py
backend/src/visualization/: visualize.py
frontend/: Dockerfile  README.md  app.py  config.py  main.py  pyproject.toml  servers_config.json
frontend/apps/: __init__.py  mcp_playground.py
frontend/services/: __init__.py  chat_service.py
frontend/ui_components/: __init__.py  main_components.py  sidebar_components.py
frontend/utils/: __init__.py  ai_prompts.py  async_helpers.py  tool_schema_parser.py
