[project]
name = "frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.19",
    "langchain-aws>=0.2.30",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.6.5",
    "nest-asyncio>=1.6.0",
    "streamlit>=1.48.1",
]
